--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.config.js",
+    "start:standalone": "webpack serve --config webpack.config.js --env standalone=true",
     "build": "webpack --config webpack.config.js",
     "test": "jest",
     "coverage": "jest --coverage"
