refactor: se actualizan los alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
       "mfCharacterDetail/MfCharacterDetail": ["src/remotes/StandAloneCharacterDetailApp.tsx"],
       "@images/*": ["src/assets/images/*"],
       "@components/*": ["src/components/*"],
+      "@remotes/*": ["src/remotes/*"],
+      "@routes/*": ["src/routes/*"],
+      "@styles/*": ["src/styles/*"],
     },
     "module": "esnext",
     "moduleResolution": "node",
