--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest",
     "coverage": "jest --coverage"
   },
+  "lint-staged":{"*.{js,jsx,ts,tsx}": ["eslint --fix","prettier --write"]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/StewieMayer/rick-n-morty-mf-app.git"
@@ -53,10 +55,14 @@
     "babel-jest": "^30.0.5",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.33.0",
     "html-webpack-plugin": "^5.6.3",
+    "husky": "^9.1.7",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "lint-staged": "^16.1.5",
     "postcss-loader": "^8.1.1",
+    "prettier": "^3.6.2",
     "react-router-dom": "^7.8.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.11",
