--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "test": "jest",
     "coverage": "jest --coverage"
   },
-  "lint-staged":{"*.{js,jsx,ts,tsx}": ["eslint --fix","prettier --write"]
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "repository": {
     "type": "git",
