--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -13,6 +13,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup SSH Key
+        uses: webfactory/ssh-agent@v0.9.0
+        with: 
+          ssh-private-key: ${{secrets.MONOREPO_SSH_KEY}}
+
       - name: Setup Git
         run: |
           git config --global user.email "bot@github.com"
