--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "\"\"",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
-    "start:standalone": "webpack serve --config webpack.config.js --env standalone=true",
-    "build": "webpack --config webpack.config.js",
+    "start": "webpack serve --config webpack.config.js --env NODE_ENV=development",
+    "start:standalone": "webpack serve --config webpack.config.js --env standalone=true, NODE_ENV=development",
+    "build": "webpack --config webpack.config.js --env NODE_ENV=production",
     "test": "jest",
     "coverage": "jest --coverage"
   },
